<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uiBg"
    android:fitsSystemWindows="true"
    app:layout_constraintTop_toTopOf="parent"
    android:foreground="?android:attr/selectableItemBackground"
    style="@style/AppBottomSheetDialogTheme"
    tools:context=".ui.fragments.PlayingMusicBottomSheetFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
   >

        <ImageView
            android:id="@+id/dropDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="36dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_medium"
                android:freezesText="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Bodf"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:freezesText="true"
                android:gravity="start"
                android:maxLines="1"
                android:paddingVertical="4dp"
                android:scrollHorizontally="true"
                android:text="Imagine Dragon"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topLL" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.43"
        android:maxHeight="340dp"
        app:layout_constraintWidth_percent="0.86"
        android:layout_marginTop="30dp"
        android:background="@drawable/image"
        android:elevation="120dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLL">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/musicImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageofmusic"
                android:scaleType="centerCrop"
                android:src="@drawable/headphone" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <ImageView
        android:id="@+id/addFav"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/addfaviorite"
        android:foreground="@drawable/rounded_clickable_effect"
        android:foregroundGravity="center"
        android:padding="3dp"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@id/seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:layout_marginEnd="16dp"
        android:maxHeight="4dip"
        android:minHeight="4dip"
        android:progress="0"
        android:progressDrawable="@drawable/seek_bar_color"
        android:thumb="@drawable/thumb_clr"
        app:layout_constraintBottom_toTopOf="@id/playPauseLL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/runTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="8dp"
        android:text="00:00"
        android:textColor="@color/transhparent_gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <TextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="8dp"
        android:text="03:45"
        android:textColor="@color/transhparent_gray"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <LinearLayout
        android:id="@+id/playPauseLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_layout">

        <ImageView
            android:id="@+id/backward_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/goprevious"
            android:elevation="4dp"
            android:foreground="@drawable/rounded_clickable_effect"
            android:scaleType="fitXY"
            android:src="@drawable/ic_go_previous" />

        <ImageButton
            android:id="@+id/play_paush_btn"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/pl_ps_btn"
            android:contentDescription="@string/playpush"
            android:padding="8dp"
            android:elevation="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/forward_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/gonext"
            android:elevation="4dp"
            android:foreground="@drawable/rounded_clickable_effect"
            android:scaleType="fitXY"
            android:src="@drawable/ic_go_next" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>